--- a/web/package.json
+++ b/web/package.json
@@ -24,10 +24,14 @@
     "babel-preset-react": "^6.5.0",
     "d3": "^3.5.17",
     "extract-text-webpack-plugin": "^1.0.1",
+    "json-loader": "^0.5.4",
+    "mapbox-gl": "^0.21.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "topojson": "^1.6.26",
+    "transform-loader": "^0.2.3",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webworkify-webpack": "^1.1.5"
   }
 }
