--- a/web/package.json
+++ b/web/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/tuttinator/crowding#readme",
   "devDependencies": {
+    "aja": "^0.4.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "d3": "^3.5.17",
+    "d3-scale": "^1.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.4",
     "mapbox-gl": "^0.21.0",
@@ -30,6 +32,7 @@
     "react-dom": "^15.1.0",
     "topojson": "^1.6.26",
     "transform-loader": "^0.2.3",
+    "turf-centroid": "^3.0.12",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webworkify-webpack": "^1.1.5"
